2012-03-10  Kostas Nakos  <knakos@gmail.com>
* android/*: Rename android port to Colleen


2012-03-08  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* atari.[ch], cfg.c, input.c, memory.[ch], sysrom.[ch], ui.c, atari800.man,
  DOC/USAGE: Add emulation of the XEGS (builtin game, detachable keyboard).

* atari.[ch], cfg.c, input.c, ui.c: Add emulation of 1200XL option jumpers,
  as described in Atari XL Addendum section 3.8.

* ui.c: Emulate 32KB and 48KB memory expansions for the 600XL manufactured by
  RC Systems.


2012-03-05  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* memory.c, pia.[ch], statesav.c: Fix 2 errors related to separate access
  of CPU and ANTIC to XE RAM:
  - Self-Test should be visible also in the bank seen by ANTIC.
  - When saving/loading a savestate in which only ANTIC has access to XE RAM,
  XE bank number was not saved/loaded correctly. To fix this, loading/saving
  of MEMORY_xe_bank had to be moved from PIA_StateRead to MEMORY_StateRead; so
  I also moved a few other variables in those functions to where they belong.

* atari.[ch], cartridge.c, cfg.c, devices.c, esc.c, input.c, memory.c, pia.c,
  screen.[ch], sysrom.[ch], ui_basic.c, ui.c, atari800.man, DOC/USAGE: Add
  emulation of the 1200XL (no builtin BASIC, LEDs overlayed on screen, 2 new
  XL OS revisions). The System ROM Settings menu ceased to fit on one screen,
  so it is split into submenus.

* sdl/input.c: When in 1200XL mode, map arrows to F1-F4 keys.

* atari.[ch], cartridge.c, devices.c, esc.c, input.c, memory.c, pia.c,
  screen.c, ui.c, sdl/input.c, android/jni/jni.c: Replace most of the
  "if Atari800_machine_type ==" statements with references to
  Atari800_features  - the code was starting to be too convoluted.


2012-02-23  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* cfg.c, memory.[ch], ui.c: Allow choosing more RAM amounts for 400/800, based
  on possible combinations of CX852 and CX853 memory modules. Extending the